--- a/src/assets/_custom-variables.scss
+++ b/src/assets/_custom-variables.scss
@@ -299,10 +299,10 @@ $cyans: (
 
 // scss-docs-start theme-color-variables
 $primary:       #D66434 !default;
-$secondary:     $gray-600 !default;
-$success:       $green !default;
+$secondary:     #A370F7 !default;//$gray-600 !default;
+$success:       #75B798 !default;//$green !default;
 $info:          $cyan !default;
-$warning:       $yellow !default;
+$warning:       #FEB272 !default;//$yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
 $dark:          $gray-900 !default;
@@ -544,7 +544,7 @@ $border-color-translucent:    rgba($black, .175) !default;
 // scss-docs-end border-variables
 
 // scss-docs-start border-radius-variables
-$border-radius:               .9rem !default;//.375rem !default;
+$border-radius:               .375rem !default;
 $border-radius-sm:            .25rem !default;
 $border-radius-lg:            .5rem !default;
 $border-radius-xl:            1rem !default;
