--- a/src/assets/modal.scss
+++ b/src/assets/modal.scss
@@ -13,14 +13,14 @@
 }
 
 .modal-body {
-  background-color: #10081b;
+  background-color: #373239;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   box-shadow: 0 -8px 12px #00000029;
 }
 .modal-footer {
   border: none;
-  background-color: #10081b;
+  background-color: #373239;
 }
 .modal {
   color: #fff;
@@ -37,12 +37,12 @@
 }
 
 .modal-body {
-  background-color: #10081b;
+  background-color: #373239;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   box-shadow: 0 -8px 12px #00000029;
 }
 .modal-footer {
   border: none;
-  background-color: #10081b;
+  background-color: #373239;
 }
